--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
     "express": "^5.1.0",
-    "puppeteer": "^24.15.0"
+    "puppeteer-core": "^24.15.0"
   }
 }
